--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/base.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/base.html
@@ -1,42 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <title>{% block title %}Metodo de Biseccion nuevo{% endblock %}</title>
   {% load static %}
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"/>
-  <style> 
-    .container {
-      border: 2px solid black;
-      border-radius: 10px;
-      padding: 20px;
-      margin-top: 50px;
-      box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
-    }
+  <link rel="stylesheet" href="{% static 'reset.css' %}" />
+  <link rel="stylesheet" href="{% static 'Style.css' %}" />
 
-    header {
-      border-bottom: 1px solid black;
-      padding-bottom: 10px;
-      margin-bottom: 20px;
-    }
-
-    hr {
-      border-top: 1px solid black;
-      margin: 20px 0;
-    }
-  </style>
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1" />
 </head>
+<nav class="nav2 navbar-responsive">
+  <a class="logo" title="Pokedex Icon">ANS_Math</a>
+  <ul>
+    <li><a href="/index.html">Inicio</a></li>
+    <li><a href="/Doc.html">Documentacion</a></li>
+    <li><a href="/abaut.html">Contacto</a></li>
+    <li><a href="/abaut.html">Equipos</a></li>
+    <li><a href="https://github.com/0kev0/0Kev0.github.io">GitHub</a></li>
+  </ul>
+</nav>
+
 <body class="bg-secondary">
-  <div class="container">
-    <header class="text-center py-5">
-      <h1>Metodo de Biseccion Nuevo</h1>
-    </header>
-    <hr>
-    <main>
-      {% block content %}
-      {% endblock %}
-    </main>
-    <hr>
-  </div>
+
+
 </body>
+
+
+
 </html>
