--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/base.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/base.html
@@ -1,42 +1,71 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <title>{% block title %}Metodo de Biseccion nuevo{% endblock %}</title>
   {% load static %}
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"/>
-  <style> 
-    .container {
-      border: 2px solid black;
-      border-radius: 10px;
-      padding: 20px;
-      margin-top: 50px;
-      box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
-    }
+  <link rel="stylesheet" type="text/css"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
 
-    header {
-      border-bottom: 1px solid black;
-      padding-bottom: 10px;
-      margin-bottom: 20px;
-    }
+  <link rel="stylesheet" type="text/css" href="{% static 'DripCSS/CSS/reset.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'DripCSS/CSS/Style.css'%}" />
 
-    hr {
-      border-top: 1px solid black;
-      margin: 20px 0;
-    }
-  </style>
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1" />
 </head>
-<body class="bg-secondary">
+
+<body class="Bg-BaseWhite">
+  <nav class="nav2 navbar-responsive">
+    <a href="#" class="logo">ANS_Math</a>
+    <ul>
+      <li><a href="/index.html">Inicio</a></li>
+      <li><a href="/temas.html">Temas</a></li>
+      <li><a href="/Doc.html">Documentacion</a></li>
+      <li><a href="/abaut.html">Contacto</a></li>
+      <li><a href="https://github.com/0kev0/0Kev0.github.io">GitHub</a></li>
+    </ul>
+  </nav>
+
   <div class="container">
     <header class="text-center py-5">
       <h1>Metodo de Biseccion Nuevo</h1>
     </header>
-    <hr>
-    <main>
-      {% block content %}
-      {% endblock %}
-    </main>
-    <hr>
+    <hr />
+    <main>{% block content %} {% endblock %}</main>
+    <hr />
   </div>
 </body>
+<div class="cell-footer">
+  <footer class="pie-pagina plta-dos-backgraund-B">
+    <div class="grupo-1">
+      <div class="Fother-box">
+        <figure>
+          <a href="#">
+            <img src="/WhatsApp_Image_2024-04-30_at_9.34.35_PM-removebg-preview.png" alt="Logo de drip.css" />
+          </a>
+        </figure>
+      </div>
+      <div class="Fother-box">
+        <h2>Universidad de el Salvador</h2>
+        <p>Departamento de Ingenieria y Arquitectura</p>
+        <p>Ingenieria de Sistemas Informaticos</p>
+      </div>
+      <div class="Fother-box">
+        <h2>SIGUENOS</h2>
+        <div class="red-social">
+          <a id="fb" href="#" class="fa fa-facebook fb"></a>
+          <a id="ig" href="#" class="fa fa-instagram"></a>
+          <a id="tw" href="#" class="fa fa-twitter"></a>
+          <a id="yt" href="https://youtu.be/dQw4w9WgXcQ" class="fa fa-youtube"></a>
+        </div>
+      </div>
+    </div>
+    <div class="grupo-2">
+      <small>&copy; 2024 <b>Drip.css</b> - Todos los Derechos Reservados.</small>
+    </div>
+  </footer>
+</div>
+<script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/66ad0f1cd6.js" crossorigin="anonymous"></script>
+
 </html>
