coneccion a base de datos

--- a/Django_Metodo de Biseccion/Biseccion/myapp/static/CSS/SASS/_botones.scss
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/static/CSS/SASS/_botones.scss
@@ -170,6 +170,7 @@
 .butontest_boxshadow_Th3 {
   @extend .butontest_boxshadow_Th;
   background: $color-secundarioC;
+  height: 100vh !important;
 
   &:hover {
     background: lighten($color: $color-primarioC, $amount: 5);
