--- a/Django_Metodo de Biseccion/Biseccion/myapp/static/CSS/SASS/_FontsStyles.scss
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/static/CSS/SASS/_FontsStyles.scss
@@ -258,17 +258,21 @@ $FontPack4: ('Titulo': 'Roboto', 'Tema': 'Montserrat', 'Texto': 'Open Sans');
     font-style: italic;
     font-family: map-get($map: $FontPack3, $key: Titulo);
     align-self: self-start;
+    color: rgb(0, 255, 55);
 
     &::first-letter {
         font-size: map-get($map: $FontSize, $key: "pequeno");
     }
 }
 
-.contenido {
+.contenido__ {
     font-size: map-get($map: $FontSize, $key: "grande");
-    font-weight: 500;
+    font-weight: bolder;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-wrap: wrap;
+    margin-bottom: 20px;
+    color: rgb(0, 255, 55);
+
 
 }
 
