--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/base.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/base.html
@@ -2,39 +2,42 @@
 <html lang="es">
 
 <head>
-  <title>{% block title %}Metodo de Biseccion nuevo{% endblock %}</title>
+  <title>{% block title %} Metodo de Biseccion nuevo {% endblock %}</title>
   {% load static %}
   <link rel="stylesheet" type="text/css"
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="{% static 'CSS\reset.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'CSS\Style.css'%}" />
+  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/> 
+</head> 
 
-  <link rel="stylesheet" type="text/css" href="{% static 'DripCSS/CSS/reset.css' %}" />
-  <link rel="stylesheet" type="text/css" href="{% static 'DripCSS/CSS/Style.css'%}" />
+<nav class="nav2 navbar-responsive">
+  <a href="#" class="logo">ANS_Math</a>
+  <ul>
+    <li><a href="/index.html">Inicio</a></li>
+    <li><a href="/temas.html">Temas</a></li>
+    <li><a href="/Doc.html">Documentacion</a></li>
+    <li><a href="/abaut.html">Contacto</a></li>
+    <li><a href="https://github.com/0kev0/0Kev0.github.io">GitHub</a></li>
+  </ul>
+</nav>
 
-  <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1" />
-</head>
+<body class="Bg-BaseWhite" style="height: 100vh">
+  <div class="formReserva" >
 
-<body class="Bg-BaseWhite">
-  <nav class="nav2 navbar-responsive">
-    <a href="#" class="logo">ANS_Math</a>
-    <ul>
-      <li><a href="/index.html">Inicio</a></li>
-      <li><a href="/temas.html">Temas</a></li>
-      <li><a href="/Doc.html">Documentacion</a></li>
-      <li><a href="/abaut.html">Contacto</a></li>
-      <li><a href="https://github.com/0kev0/0Kev0.github.io">GitHub</a></li>
-    </ul>
-  </nav>
+  <main>{% block content %} {% endblock %}</main>
+</div>
 
-  <div class="container">
-    <header class="text-center py-5">
-      <h1>Metodo de Biseccion Nuevo</h1>
-    </header>
-    <hr />
-    <main>{% block content %} {% endblock %}</main>
-    <hr />
-  </div>
 </body>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
 <div class="cell-footer">
   <footer class="pie-pagina plta-dos-backgraund-B">
     <div class="grupo-1">
