--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/home.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/home.html
@@ -3,8 +3,7 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-   <div class="text-center fade-in">
-     <h2 class="mb-4">¡Bienvenido!</h2>
+     <h2 class="contenido__ ">¡Bienvenido!!!</h2>
      {% if user.is_authenticated %}
         <p>Hola {{ user.username }}!</p>
         <a href= class="btn btn-danger">Cerrar Sesion</a><br>
@@ -12,10 +11,9 @@
         <br><a class="btn btn-primary mt-4">Perfil</a><br>
         <a  class="btn btn-primary mt-4">Calcular Metodo de Biseccion</a><br>
       {% else %}
-        <a  class="btn btn-primary"><span class="glyphicon glyphicon-log-in"></span>Iniciar Sesion</a> 
-        <a  class="btn btn-success">Registrarse</a>
+        <a  class="butontest_boxshadow_Th3">Iniciar Sesion</a> 
+        <a  class="buttontest">Registrarse</a>
         <br><br></a>Utilizar método sin registrarse</a><br>
         <a href="{% url 'calcular_Biseccion' %}" class="btn btn-primary mt-4">Calcular metodo de Biseccion</a><br>
       {% endif %}
-   </div>
 {% endblock %}
