--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/baseDiferencias.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/baseDiferencias.html
@@ -10,7 +10,7 @@
       border-radius: 10px;
       padding: 20px;
       margin-top: 50px;
-      box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+      box-shadow: rgba(0, 0, 255, 0.5) 0px 20px 30px -10px;
     }
 
     header {
@@ -26,7 +26,7 @@
   </style>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
 </head>
-<body class="">
+<body class="bg-dark text-light">
   <div class="container">
     <header class="text-center py-5">
       <h1>Metodo de Diferencias Numericas</h1>
