--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/calcular_biseccion.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/calcular_biseccion.html
@@ -18,32 +18,33 @@
             <p>Raíz aproximada: {{ resultado_biseccion.0|default:"No calculada" }}</p>
             <p>Número de iteraciones: {{ resultado_biseccion.1|default:"No calculado" }}</p>
             <p>Error: {{ resultado_biseccion.2|default:"No calculado" }}</p>
-                    
-            <h3>Iteraciones:</h3>
-            <table border="1" style="border-collapse: collapse; width: 100%;">
-                <thead>
-                    <tr style="background-color: #f2f2f2;">
-                        <th style="padding: 8px; text-align: center;">Iteración</th>
-                        <th style="padding: 8px; text-align: center;">f(Raíz)</th>
-                        <th style="padding: 8px; text-align: center;">Raíz Aproximada</th>
-                        <th style="padding: 8px; text-align: center;">Error %</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for iteracion in resultado_biseccion.3 %}
-                    <tr>
-                        <td style="padding: 8px; text-align: center;">{{ iteracion.0 }}</td>
-                        <td style="padding: 8px; text-align: center;">{{ iteracion.1 }}</td>
-                        <td style="padding: 8px; text-align: center;">{{ iteracion.2 }}</td>
-                        <td style="padding: 8px; text-align: center;">{{ iteracion.3 }}</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-
-            {% if grafica_base64 %}
-                <h2>Gráfica:</h2>
-                <img src="data:image/png;base64,{{ grafica_base64 }}" alt="Gráfica de la función y raíz encontrada">
+            
+            {% if user.is_authenticated %}
+                <h3>Iteraciones:</h3>
+                <table border="1" style="border-collapse: collapse; width: 100%;">
+                    <thead>
+                        <tr style="background-color: #f2f2f2;">
+                            <th style="padding: 8px; text-align: center;">Iteración</th>
+                            <th style="padding: 8px; text-align: center;">f(Raíz)</th>
+                            <th style="padding: 8px; text-align: center;">Raíz Aproximada</th>
+                            <th style="padding: 8px; text-align: center;">Error %</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for iteracion in resultado_biseccion.3 %}
+                        <tr>
+                            <td style="padding: 8px; text-align: center;">{{ iteracion.0 }}</td>
+                            <td style="padding: 8px; text-align: center;">{{ iteracion.1 }}</td>
+                            <td style="padding: 8px; text-align: center;">{{ iteracion.2 }}</td>
+                            <td style="padding: 8px; text-align: center;">{{ iteracion.3 }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+                {% if grafica_base64 %}
+                    <h2>Gráfica:</h2>
+                    <img src="data:image/png;base64,{{ grafica_base64 }}" alt="Gráfica de la función y raíz encontrada">
+                {% endif %}
             {% endif %}
         {% endif %}
     </div>
