--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/home.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/home.html
@@ -7,13 +7,14 @@
      <h2 class="mb-4">¡Bienvenido!</h2>
      {% if user.is_authenticated %}
         <p>Hola {{ user.username }}!</p>
-        <a href= class="btn btn-danger">Cerrar Sesion</a><br>
-        <br><a  class="btn btn-primary mt-4">Editar contraseña</a>
-        <br><a class="btn btn-primary mt-4">Perfil</a><br>
-        <a  class="btn btn-primary mt-4">Calcular Metodo de Biseccion</a><br>
+        <a href="{% url 'cerrar_sesion' %}" class="btn btn-danger">Cerrar Sesion</a><br>
+        <br><a href="{% url 'editar' %}" class="btn btn-primary mt-4">Editar contraseña</a>
+        <br><a href="{% url 'perfil' %}" class="btn btn-primary mt-4">Perfil</a><br>
+        <a href="{% url 'calcular_Biseccion' %}" class="btn btn-primary mt-4">Calcular Metodo de Biseccion</a><br>
+        <a href="{% url 'diferencias_divididas' %}" class="btn btn-primary mt-4">Calcular Metodo de Diferencias Divididas</a><br>
       {% else %}
         <a href="{% url 'login' %}" class="btn btn-primary"><span class="glyphicon glyphicon-log-in"></span>Iniciar Sesion</a> 
-        <a  class="btn btn-success">Registrarse</a>
+        <a href="{% url 'registro' %}" class="btn btn-success">Registrarse</a>
         <br><br></a>Utilizar método sin registrarse</a><br>
         <a href="{% url 'calcular_Biseccion' %}" class="btn btn-primary mt-4">Calcular metodo de Biseccion</a><br>
         <a href="{% url 'diferencias_divididas' %}" class="btn btn-primary mt-4">Calcular Metodo de Diferencias Divididas</a><br>
