--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/calcular_biseccion.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/calcular_biseccion.html
@@ -18,44 +18,41 @@
             <p>Raíz aproximada: {{ resultado_biseccion.0|default:"No calculada" }}</p>
             <p>Número de iteraciones: {{ resultado_biseccion.1|default:"No calculado" }}</p>
             <p>Error: {{ resultado_biseccion.2|default:"No calculado" }}</p>
-            
-            {% if user.is_authenticated %}
-                <h3>Iteraciones:</h3>
-                <table border="1" style="border-collapse: collapse; width: 100%;">
-                    <thead>
-                        <tr style="background-color: #f2f2f2;">
-                            <th style="padding: 8px; text-align: center;">Iteración</th>
-                            <th style="padding: 8px; text-align: center;">f(Raíz)</th>
-                            <th style="padding: 8px; text-align: center;">Raíz Aproximada</th>
-                            <th style="padding: 8px; text-align: center;">Error %</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for iteracion in resultado_biseccion.3 %}
-                        <tr>
-                            <td style="padding: 8px; text-align: center;">{{ iteracion.0 }}</td>
-                            <td style="padding: 8px; text-align: center;">{{ iteracion.1 }}</td>
-                            <td style="padding: 8px; text-align: center;">{{ iteracion.2 }}</td>
-                            <td style="padding: 8px; text-align: center;">{{ iteracion.3 }}</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+
+            {% if not request.user.is_authenticated %}
+                <p>Para ver más detalles, por favor <a href="{% url 'registro' %}" class="badge text-bg-primary text-wrap">inicia sesión</a>.</p>
+            {% else %}
+                {% if resultado_biseccion.3 %}
+                    <h3>Iteraciones:</h3>
+                    <table border="1" style="border-collapse: collapse; width: 100%;">
+                        <thead>
+                            <tr style="background-color: #f2f2f2;">
+                                <th style="padding: 8px; text-align: center;">Iteración</th>
+                                <th style="padding: 8px; text-align: center;">f(Raíz)</th>
+                                <th style="padding: 8px; text-align: center;">Raíz Aproximada</th>
+                                <th style="padding: 8px; text-align: center;">Error %</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for iteracion in resultado_biseccion.3 %}
+                            <tr>
+                                <td style="padding: 8px; text-align: center;">{{ iteracion.0 }}</td>
+                                <td style="padding: 8px; text-align: center;">{{ iteracion.1 }}</td>
+                                <td style="padding: 8px; text-align: center;">{{ iteracion.2 }}</td>
+                                <td style="padding: 8px; text-align: center;">{{ iteracion.3 }}</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                {% endif %}
                 {% if grafica_base64 %}
                     <h2>Gráfica:</h2>
                     <img src="data:image/png;base64,{{ grafica_base64 }}" alt="Gráfica de la función y raíz encontrada">
                 {% endif %}
+                <!--X
+                <h3>Descargar PDF:</h3>
+                <a href="{% url 'generar_pdf' %}?resultado_biseccion={{ resultado_biseccion|safe|escapejs }}">Descargar PDF</a>-->
             {% endif %}
         {% endif %}
     </div>
-    <style>
-        .dot {
-            width: 10px;
-            height: 10px;
-            background-color: #000;
-            border-radius: 50%;
-            display: inline-block;
-            margin-right: 10px; /* Ajusta la separación horizontal */
-        }
-    </style>
 {% endblock %}
