--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/baseDiferencias.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/baseDiferencias.html
@@ -26,6 +26,27 @@
   </style>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
 </head>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light">
+  <div class="container">
+    <a class="navbar-brand" href="#">Calculadora Mamalona</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a href="{% url 'teoriaB' %}" class="nav-link">Metodo de Biseccion</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'teoriaD' %}">Diferenciacion Numerica</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <body class="bg-dark text-light">
   <div class="container">
     <header class="text-center py-5">
