--- a/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/home.html
+++ b/Django_Metodo de Biseccion/Biseccion/myapp/templates/Biseccion/home.html
@@ -11,13 +11,13 @@
         <br><a href="{% url 'editar' %}" class="btn btn-primary mt-4">Editar contraseña</a>
         <br><a href="{% url 'perfil' %}" class="btn btn-primary mt-4">Perfil</a><br>
         <a href="{% url 'calcular_Biseccion' %}" class="btn btn-primary mt-4">Calcular Metodo de Biseccion</a><br>
-        <a href="{% url 'diferencias_divididas' %}" class="btn btn-primary mt-4">Calcular Metodo de Diferencias Divididas</a><br>
+        <a href="{% url 'diferencias_divididas' %}" class="btn btn-primary mt-4">Calcular Metodo de Diferenciacion Numericas</a><br>
       {% else %}
         <a href="{% url 'login' %}" class="btn btn-primary"><span class="glyphicon glyphicon-log-in"></span>Iniciar Sesion</a> 
         <a href="{% url 'registro' %}" class="btn btn-success">Registrarse</a>
         <br><br></a>Utilizar método sin registrarse</a><br>
         <a href="{% url 'calcular_Biseccion' %}" class="btn btn-primary mt-4">Calcular metodo de Biseccion</a><br>
-        <a href="{% url 'diferencias_divididas' %}" class="btn btn-primary mt-4">Calcular Metodo de Diferencias Divididas</a><br>
+        <a href="{% url 'diferencias_divididas' %}"  class="btn btn-primary mt-4">Calcular Metodo de Diferenciacion Numericas</a><br>
       {% endif %}
    </div>
 {% endblock %}
